Mave away from using simple xml binding to JAXB for CompanyMetaDataOperations.

--- a/build.gradle
+++ b/build.gradle
@@ -120,7 +120,7 @@ project('spring-social-intuit') {
        compile ("javax.xml.bind:jaxb-api:2.2.6")
        compile ("com.sun.xml.bind:jaxb-impl:2.2.4")
        compile ("org.jvnet.jaxb2_commons:jaxb2-basics:0.5.3")
-       compile ("org.simpleframework:simple-xml:2.6.2")
+//       compile ("org.simpleframework:simple-xml:2.6.2")
     }
 }
 
