--- a/build.gradle
+++ b/build.gradle
@@ -24,18 +24,17 @@ configure(allprojects) {
 
     group = 'org.springframework.social'
 
-    sourceCompatibility=1.5
-    targetCompatibility=1.5
+    sourceCompatibility=1.6
+    targetCompatibility=1.6
 
     ext {
-		springSocialVersion = '1.1.0.M2'
-		jacksonVersion = '1.9.9'
+		springSocialVersion = '1.1.0.M4'
+		jacksonVersion = '2.2.2'
 		junitVersion = '4.11'
 		mockitoVersion = '1.9.5'
-		springVersion = '3.2.1.RELEASE'
-		springTestMvcVersion = '1.0.0.BUILD-SNAPSHOT'
-	 	springSecurityCryptoVersion = '3.1.3.RELEASE'
-		springWSVersion = '2.0.3.RELEASE'
+		springVersion = '3.2.6.RELEASE'
+	 	springSecurityCryptoVersion = '3.2.0.RELEASE'
+		springWSVersion = '2.1.4.RELEASE'
 		hamcrestVersion = '1.3'
 		commonsVersion = '1.4'
 		xmlunitVersion = '1.4'
@@ -115,7 +114,9 @@ project('spring-social-intuit') {
     description = 'Intuit API'
     dependencies {
        compile ("org.springframework.social:spring-social-core:$springSocialVersion")
-       compile ("org.codehaus.jackson:jackson-mapper-asl:$jacksonVersion")
+       compile ("com.fasterxml.jackson.core:jackson-core:$jacksonVersion")
+       compile ("com.fasterxml.jackson.core:jackson-databind:$jacksonVersion")
+       compile ("com.fasterxml.jackson.core:jackson-annotations:$jacksonVersion")
        compile ("org.springframework.security:spring-security-crypto:$springSecurityCryptoVersion")
        compile ("javax.xml.bind:jaxb-api:2.2.6")
        compile ("com.sun.xml.bind:jaxb-impl:2.2.4")
