--- a/build.gradle
+++ b/build.gradle
@@ -114,6 +114,7 @@ project('spring-social-intuit') {
     description = 'Intuit API'
     dependencies {
        compile ("org.springframework.social:spring-social-core:$springSocialVersion")
+	   compile ("org.springframework.social:spring-social-config:$springSocialVersion")
 	   compile ("org.springframework.social:spring-social-security:$springSocialVersion")
        compile ("com.fasterxml.jackson.core:jackson-core:$jacksonVersion")
        compile ("com.fasterxml.jackson.core:jackson-databind:$jacksonVersion")
